--- a/dashboard.html
+++ b/dashboard.html
@@ -3,83 +3,96 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <title>SmartAca Dashboard</title>
     <style>
         body {
-            background-image: url('https://images.unsplash.com/photo-1516528387618-afa90b13e000?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
-            background-size: cover;
-            background-repeat: no-repeat;
-            background-position: center;
-            height: 100vh; /* Set body height to full viewport height */
+            background-color: black;
+            color: white;
+            font-family: Arial, sans-serif;
             display: flex;
-            justify-content: center; /* Center horizontally */
-            align-items: center; /* Center vertically */
-            color: #ffffff;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
         }
-        .we
-        .container-fluid {
-            background-color: #ffffff; /* Warna latar belakang kontainer lebih terang */
-            border-radius: 10px; /* Mengatur sudut kontainer */
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); /* Menambahkan bayangan halus */
-            padding: 20px; /* Padding untuk kontainer */
+        .container {
+            background-color: black;
+            padding: 20px;
+            border-radius: 10px;
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            grid-gap: 10px;
         }
-        .menu {
-            margin-left: 20px; /* Menggeser menu ke kanan */
+        .item {
+            background-color: #333;
+            padding: 10px;
+            border-radius: 5px;
+            text-align: center;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
         }
-        .nav-link {
-            color: #000000; /* Warna teks lebih terang */
+        .item-title {
+            font-size: 14px;
+            margin-bottom: 10px;
         }
-        .nav-link.active {
-            background-color: #007bff; /* Warna latar belakang item menu aktif lebih terang */
-            color: #ffffff; /* Warna teks item menu aktif lebih terang */
+        .item-value {
+            font-size: 24px;
+            font-weight: bold;
         }
     </style>
 </head>
 <body>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-2">
-                <div class="logo text-center mt-3">
-                    <!-- Add your logo here -->
-                    <h1>Logo</h1>
-                </div>
-                <div class="menu mt-5">
-                    <ul class="nav nav-pills flex-column">
-                        <li class="nav-item">
-                            <a class="nav-link active" href="#">Menu 1</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Menu 2</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Menu 3</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Menu 4</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-10">
-                <!-- Add your content here -->
-                <h1 class="text-center mt-5">Welcome to the Dashboard</h1>
-            </div>
+    <div class="container">
+        <div class="item">
+            <div class="item-title">Dashboard</div>
+            <div class="item-value">&#x1F3E0;</div>
+        </div>
+        <div class="item">
+            <div class="item-title">Kondisi</div>
+            <div class="item-value">Aman</div>
+        </div>
+        <div class="item">
+            <div class="item-title">Penyebab</div>
+            <div class="item-value">-</div>
+        </div>
+        <div class="item">
+            <div class="item-title">Kondisi tanah</div>
+            <div class="item-value">&#x1F4A3;</div>
+        </div>
+        <div class="item">
+            <div class="item-title">Lembap Udara</div>
+            <div class="item-value">80%</div>
+        </div>
+        <div class="item">
+            <div class="item-title">Lembap Tanah</div>
+            <div class="item-value">65%</div>
+        </div>
+        <div class="item">
+            <div class="item-title">Suhu</div>
+            <div class="item-value">80%</div>
+        </div>
+        <div class="item">
+            <div class="item-title">Cahaya</div>
+            <div class="item-value">1</div>
+        </div>
+        <div class="item">
+            <div class="item-title">Pupuk</div>
+            <div class="item-value">1</div>
+        </div>
+        <div class="item">
+            <div class="item-title">Umur</div>
+            <div class="item-value">-</div>
+        </div>
+        <div class="item">
+            <div class="item-title">Luas Tanah</div>
+            <div class="item-value">-</div>
+        </div>
+        <div class="item">
+            <div class="item-title">Setting Sawah</div>
+            <div class="item-value">&#x2691;&#xFE0F;</div>
         </div>
     </div>
-    <!-- Your HTML content goes here -->
-    <script>
-        const menuItems = document.querySelectorAll('.nav-link');
-        menuItems.forEach((item) => {
-            item.addEventListener('click', () => {
-                menuItems.forEach((otherItem) => {
-                    otherItem.classList.remove('active');
-                });
-                item.classList.add('active');
-            });
-        });
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz4fnFO9gybBud7TlRbs/ic4AwGcFZOxg5DpPt8EgeUIgIwzjWfXQKWA3" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
 </body>
 </html>
